# github-actions

./: README.md  WORKSPACE  bazel-bin  bazel-github-actions  bazel-out  bazel-testlogs  github.json
.github/workflows/: clone_test.yml  github-actions-bazel.yml
src/golang/: BUILD.bazel  go.mod  go.sum
src/golang/bash_shebang/: hello.sh
src/golang/bash_shebang/cli/: BUILD.bazel  main.go
