load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cli_lib",
    srcs = ["main.go"],
    importpath = "github.com/fzinzun/bash_shebang/cli",
    visibility = ["//visibility:private"],
    deps = ["@in_gopkg_yaml_v2//:yaml_v2"],
)

go_binary(
    name = "cli",
    embed = [":cli_lib"],
    visibility = ["//visibility:public"],
)
